--- a/styles/global.css
+++ b/styles/global.css
@@ -16,8 +16,54 @@
   --gray-400: #878EA1;
   --gray-500: #C0C4CE;
   --gray-600: #E2E4E9;
+
+  --font-family-1: 'asap', sans-serif;
+  --font-family-2: 'maven pro', sans-serif;
+  --font-family-3: 'inconsolata', sans-serif;
+
+  --title-lg: 700 56px/120% var(--font-family-1);
+  --title-md: 700 24px/120% var(--font-family-1);
+  --title-sm: 700 16px/120% var(--font-family-1);
+
+  --subtitle: 400 20px/120% var(--font-family-3);
+
+  --text-md-2: 400 16px/140% var(--font-family-2);
+  --text-sm-2: 400 14px/140% var(--font-family-2);
 }
 
 body {
  color: var(--gray-500);
+}
+
+a {
+  text-decoration: none;
+}
+
+header {
+  background-image: url(../assets/Background_Intro.png);
+  background-size: cover; 
+  
+}
+
+h1 {
+  font: var(--title-lg);
+}
+
+img {
+ position: relative;
+ po 
+}
+
+.subtitle {
+  font: var(--subtitle);
+  color: var(--gray-500); 
+}
+
+.destaque {
+  color: var(--red);
+}
+
+p {
+  color: var(--gray-400);
+  font: var(--text-sm-2);
 }
