--- a/styles/main.css
+++ b/styles/main.css
@@ -52,10 +52,6 @@ section {
 
 #trabalhos {
   display: grid;
-  grid-area: trabalhos;
-  img {
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-  }
+  grid-template-columns: repeat(3, 1fr);
+  size: 330px 156px;
 }
