--- a/styles/global.css
+++ b/styles/global.css
@@ -41,7 +41,7 @@ a {
 
 
 
-#main {
+#projects {
   background-image: url(../assets/Background_Contacts.png);
   background-size: 1366px 2288px;
 }
@@ -49,5 +49,4 @@ a {
 h4 {
   font: var(--title-sm);
   display: inline-block;
-
 }
