--- a/styles/main.css
+++ b/styles/main.css
@@ -1,38 +1,3 @@
-#contato div:nth-child(1) {
-  font: var(--subtitle);
-  color: var(--purple);
-}
-
-#contato div:nth-child(2) {
-  font: var(--title-md);
-}
-
-#contato div:nth-child(3) {
-  font: var(--text-md-2)
-}
-
-section {
-  display: grid; 
-  gap: 8px;
-  justify-items: center;
-  align-items: center;
-  margin-bottom: 48px;
-}
-
-.services :nth-child(1) {
-  font: var(--subtitle);
-  color: var(--red);
-}
-
-.services :nth-child(2) {
-  font: var(--title-md);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
 #card {
   gap: 24px;
   padding: 20px;
@@ -40,14 +5,6 @@ section {
     height: 48px;
     width: 48px;
   }
-}
-
-.primary {
-  font: var(--title-sm);
-}
-
-.secondary {
-  font: var(--text-sm-2);
 }
 
 #trabalhos {
@@ -62,6 +19,55 @@ section {
   height: 156px;
 }
 
+#trabalhos {
+  figcaption {
+    margin-top: 20px;
+    p{
+      color: var(--gray-400);
+      font: var(--text-sm-2);
+      margin-top: 8px;
+    }
+  }
+  margin-bottom: 88px;
+}
+
+section {
+  display: grid; 
+  gap: 8px;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 48px;
+}
+
+#block {
+  margin-top: 30px;
+  background-color: #0D0E11;
+}
+
+.services :nth-child(1) {
+  font: var(--subtitle);
+  color: var(--red);
+}
+
+.services :nth-child(2) {
+  font: var(--title-md);
+}
+
+
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.primary {
+  font: var(--title-sm);
+}
+
+.secondary {
+  font: var(--text-sm-2);
+}
+
 .block {
   display: inline-block;
   background-color: var( --gray-300);
@@ -70,12 +76,21 @@ section {
   size: 275px 330px
 }
 
-figcaption {
-  margin-top: 20px;
-  p{
-    color: var(--gray-400);
-    font: var(--text-sm-2);
-    margin-top: 8px;
-  }
+#contato {
+  margin-top: 128px;
 }
+
+#contato div:nth-child(1) {
+  font: var(--subtitle);
+  color: var(--purple);
+}
+
+#contato div:nth-child(2) {
+  font: var(--title-md);
+}
+
+#contato div:nth-child(3) {
+  font: var(--text-md-2)
+}
+
 
