--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,4 @@
 @import url(global.css);
 @import url(header.css);
-@import url(utility.css);
 @import url(main.css);
-@import url(sections.css);
+@import url(footer.css);
