--- a/styles/footer.css
+++ b/styles/footer.css
@@ -42,13 +42,12 @@
   margin-bottom: 16px;
   width: 400px;
   height: 68px;
+  
 }
 
 
-.tags figure:nth-child(1) {
+.tags a:nth-child(1) {
   margin-top: 48px;
 }
 
-/* a:hover {
-  color: #3996DB;
-} */
+
