--- a/styles/global.css
+++ b/styles/global.css
@@ -42,7 +42,8 @@ a {
 }
 
 #projects {
-  background-image: url(../assets/Background_Contacts.png);
+  /* background-image: url(../assets/Background_Contacts.png); */
+  background-color: var(--gray-200);
   background-size: 1366px 2288px;
 }
 
