--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,9 +1,9 @@
 #contato {
-  padding: 128px 120px 200px 120px;
+  padding: 8rem 7.5rem 12.5rem 7.5rem;
   background-image: url(../assets/Background_Contacts.png);
   background-size: 100%;
   display: grid; 
-  gap: 8px;
+  gap: .5rem;
   text-align: center;
 }
 
@@ -40,13 +40,13 @@
   align-items: center;
   font: var(--text-md-2);
   background-color: var(--gray-300);
-  padding: 23px 24px 23px 22px;
+  padding: 1.43rem 1.5rem 1.43rem 1.37rem;
   border-radius: 6px;
   border: solid var(--gray-300);
-  gap: 12px;
-  margin-bottom: 16px;
-  width: 400px;
-  height: 68px;
+  gap: 0.75rem;
+  margin-bottom: 1rem;
+  width: 25rem;
+  height: 4.25rem;
   
   &:hover, &:has(tags:focus) {
     border-color: var(--blue);
@@ -55,7 +55,7 @@
 
 
 .tags a:nth-child(1) {
-  margin-top: 48px;
+  margin-top: 3rem;
 }
 
 
